--- a/local/templates/bootstap/styles.css
+++ b/local/templates/bootstap/styles.css
@@ -21,8 +21,21 @@ main{
 	width: 200px;
 }
 .c-table thead th:nth-child(4){
-	width: 60px;
+	width: 100px;
 }
 .c-table thead th:nth-child(5){
-	width: 500px;
+	 width: 500px;
+ }
+.c-table thead th:nth-child(6){
+	width: 100px;
+
+}
+.c-table tbody td:nth-child(6){
+	text-align: right;
+}
+.fa-check{
+	color: green;
+}
+.fa-times{
+	color: red;
 }
